--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,37 @@ any.</string>
         <item>10</item>
     </string-array>
 
+    <string-array name="loanPercent">
+        <item>50</item>
+        <item>60</item>
+        <item>70</item>
+        <item>80</item>
+        <item>90</item>
+        <item>100</item>
+    </string-array>
+
+    <string-array name="carYear">
+        <item>2010</item>
+        <item>2011</item>
+        <item>2012</item>
+        <item>2013</item>
+        <item>2014</item>
+        <item>2015</item>
+        <item>2016</item>
+        <item>2017</item>
+        <item>2018</item>
+    </string-array>
+
+    <string-array name="carBrand">
+        <item>TOYOTA</item>
+        <item>HONDA</item>
+        <item>HYUNDAI</item>
+        <item>PERODUA</item>
+        <item>PROTON</item>
+        <item>MAZDA</item>
+        <item>BMW</item>
+        <item>VOLKSWAGEN</item>
+        <item>MITSUBITSHI</item>
+    </string-array>
+
 </resources>
